fixed issue with devise notifications not showing in index.html.erb.
Former-commit-id: e1ec2ac69d6397a7024836fa3568eb8d55e714bd

--- a/app/assets/stylesheets/desktop.css
+++ b/app/assets/stylesheets/desktop.css
@@ -81,7 +81,6 @@ box-shadow:0px 10px 10px 3px #100707;
 	height: 1080px;
 }
 
-
 /* The "interior_content" selectors point to the content in the main part of each interior page */
 /*This is the content located in the white space on each interior page */
 #interior_content {
@@ -367,7 +366,7 @@ background-repeat:no-repeat; z-index: 105; }
 	z-index: 20000;
 	color: #FFFFFF;
 	position: absolute;
-	top: 40px;
+	top: 20px;
 	right: 60px;
 	font: 14px Arial, Helvetica, sans-serif;
 	display: inline;
@@ -376,10 +375,14 @@ background-repeat:no-repeat; z-index: 105; }
 
 #user_nav a {
 	display: inline;
-	margin-right: 5px;
+	margin-right:5px;
 	margin-left:5px;
 }
-
+#user_nav p {
+	margin-left:5px;
+	width: 250px;
+	font-size: 14px;
+}
 /*#user_nav ul {
 	list-style: none;	
   	margin: 0 0 2em;
